erpnext-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erpnext-nginx
  namespace: erpnext
spec:
  replicas: 1
  selector:
    matchLabels:
      app: erpnext-nginx
  template:
    metadata:
      labels:
        app: erpnext-nginx
    spec:
      containers:
      - name: nginx
        image: frappe/erpnext-nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /home/frappe/frappe-bench/sites
          name: sites-storage
        - mountPath: /usr/share/nginx/html/assets
          name: assets
        - mountPath: /etc/nginx/conf.d
          name: nginx-config

      volumes:
      - name: sites-storage
        persistentVolumeClaim:
          claimName: erpnext-sites-pvc
      - name: nginx-config
        configMap:
          name: erpnext-nginx-config
      - name: assets
        emptyDir: {}
