erpnext-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erpnext-worker
  namespace: erpnext
spec:
  replicas: 1
  selector:
    matchLabels:
      app: erpnext-worker
  template:
    metadata:
      labels:
        app: erpnext-worker
    spec:
      containers:
      - name: worker
        image: frappe/erpnext:version-14
        command: ["bench"]
        args: ["worker"]
        volumeMounts:
        - name: sites-data
          mountPath: /home/frappe/frappe-bench/sites
      volumes:
      - name: sites-data
        persistentVolumeClaim:
          claimName: erpnext-sites-pvc
