erpnext-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erpnext-nginx
  namespace: erpnext
spec:
  replicas: 1
  selector:
    matchLabels:
      app: erpnext-nginx
  template:
    metadata:
      labels:
        app: erpnext-nginx
    spec:
      containers:
      - name: nginx
        image: frappe/erpnext-nginx:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: sites-data
          mountPath: /home/frappe/frappe-bench/sites
      volumes:
      - name: sites-data
        persistentVolumeClaim:
          claimName: erpnext-sites-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: erpnext-nginx
  namespace: erpnext
spec:
  selector:
    app: erpnext-nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
