route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: erpnext-dev-route
  namespace: erpnext
spec:
  host: erpnext-dev.apps.ocp.local
  to:
    kind: Service
    name: erpnext-nginx  
    weight: 100
  port:
    targetPort: 8080
